# mwoo-bridge

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yml  deno.json  devbox.json  rustfmt.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/zsh/: .gitignore  .zprofile  .zshrc
deno/mwoo-bridge/: deno.json  main.ts  main_test.ts  product-C066.json  product-TEST.json  schema.ts
deno/mwoo-bridge/services/: index.ts  moo.ts  moo_test.ts  woo.ts  wp.ts
deno/mwoo-bridge/utils/: deep-diff.ts  deep-diff_test.ts  env.ts  index.ts  linter.ts
taskfiles/: _elixir.yml  _env.yml  _k8s.yml  _rust.yml
