[workspace]

resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Tanjim <nobinalo@audacioustux.com>"]
repository = "https://github.com/audacioustux/nobinalo"
license-file = "LICENSE"

[profile.release]
lto = true
codegen-units = 1
# TODO: enable Profile-Guided Optimization (PGO)

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = { level = "deny", priority = 1 }
suspicious = { level = "deny", priority = 1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# priority 0
wildcard_imports = "warn"
multiple_crate_versions = "allow"
enum_glob_use = "allow"
unwrap_used = "warn"
expect_used = "warn"
